--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,9 @@
 @import "_reset.scss";
+@import "_header.scss";
 @import "_main.scss";
+@import "_footer.scss";
+
+
+body{
+    max-height: 100vh;
+}
