--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 footer{
     display: flex;
     justify-content: center;
     height: 5vh;
     font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+
+    
     i{
         color:#64DD17;
         font-size: 40px;
