--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,14 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 section.about{
-    height: 15vh;
+    //height: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    line-height: 1.5;
+    @media(max-width:640px){
+        padding: 10%;
+    }
     p{
         font-family: 'Quicksand', sans-serif;
         font-size: 20px;
+        @media(max-width:640px){
+            font-size: 16px;
+            text-align: center;
+            
+        }
+        @media(min-width:641px) and (max-width:1280px){
+           font-size: 18px;
+        }
        
     }
    
