--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,9 +3,18 @@
 footer{
     display: flex;
     justify-content: center;
-    height: 5vh;
+    //height: 5vh;
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
+    width: 100%;
+    padding-bottom: 20px;
+    
+    @media(max-width:640px){
+        font-size: 16px; 
+    }
+    @media(min-width:641px) and (max-width:1280px){
+        font-size: 18px;
+    }
 
     
     i{
