--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,18 +5,34 @@ header{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height:30vh;
+    //height:30vh;
     div.basket{
-        height: 10vh;
+       // height: 10vh;
         display: flex;
         justify-content: flex-end;
         align-items: center;
         padding-right: 150px;
+        @media(max-width:640px){
+            padding-top: 30px;
+           padding-right: 70px;
+           padding-bottom: 50px;
+        }
+        @media(min-width:641px) and (max-width:1280px){
+            padding-right: 100px;
+        }
+        
+        
         
         div.basketPosition{
             position: relative;
             i{
                 font-size: 50px;
+                @media(max-width:640px){
+                    font-size: 40px;
+                 }
+                 @media(min-width:641px) and (max-width:1280px){
+                    font-size: 40px;
+                 }
             }
         }
         div.amountDiv{
@@ -27,6 +43,16 @@ header{
             position: absolute;
             bottom:-40%;
             left:-30%;
+            @media(max-width:640px){
+                width: 35px;
+                height: 35px;
+                bottom: -50%;
+             }
+             @media(min-width:641px) and (max-width:1280px){
+                width: 35px;
+                height: 35px;
+                bottom: -50%;
+             }
             p{
                 position: absolute;
                 font-size: 20px;
@@ -44,13 +70,26 @@ header{
         flex-direction: column; 
         justify-content: flex-start;
         align-items: center;
+        
         p:nth-of-type(1){
             font-family: 'Lobster', cursive;
             font-size: 70px;
+            @media(max-width:640px){
+                font-size: 50px;
+            }
+            @media(min-width:641px) and (max-width:1280px){
+               font-size: 60px;
+            }
             
             i{
                 font-size: 100px;
                 color:#64DD17;
+                @media(max-width:640px){
+                    font-size: 70px;
+                }
+                @media(min-width:641px) and (max-width:1280px){
+                   font-size: 80px;
+                }
             }
         }
         p:nth-of-type(2){
@@ -58,6 +97,9 @@ header{
             font-family: 'Quicksand', sans-serif;
             padding-top: 20px;
             letter-spacing: 2px;
+            @media(max-width:640px){
+                font-size: 20px;
+            }
            
 
         }     
