--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,5 +6,12 @@
 
 
 body{
-    max-height: 100vh;
+    //max-height: 100vh;
+    position: relative;
+    @media(max-width:640px){
+        height: auto;
+    }
+    @media(min-width:641px) and (max-width:1280px){
+       // height: auto;
+    }
 }
