--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,22 +3,38 @@
 footer{
     display: flex;
     justify-content: center;
-    //height: 5vh;
+    height: 5vh;
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
     width: 100%;
-    padding-bottom: 20px;
+   padding-bottom: 20px;
+    padding-top: 30px;
+   
+    
     
     @media(max-width:640px){
         font-size: 16px; 
+        text-align: center;
+        padding-top: 20px;
+      
     }
     @media(min-width:641px) and (max-width:1280px){
         font-size: 18px;
+        text-align: center;
+        padding-top: 20px;
     }
 
     
     i{
         color:#64DD17;
         font-size: 40px;
+        @media(max-width:640px){
+            font-size: 16px; 
+            
+        }
+        @media(min-width:641px) and (max-width:1280px){
+            font-size: 18px;
+            
+        }
     }
 }
