--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,7 +3,8 @@
 
 section.products{
     display: flex;
-    height: 50vh;
+   max-width: 100vw;
+   overflow: hidden;
     justify-content: space-between;
     align-items: center;
     @media(max-width:800px){
@@ -21,6 +22,7 @@ section.products{
            width: 100vw;
             
         }
+       
         
         
         div.vegetablesMenu{
@@ -28,12 +30,12 @@ section.products{
             flex-direction: column;
             position: relative;
             justify-content: center;
+           
             
         img{
             width: 100%; 
-           
-           
         }
+        
         p{
             text-align: center;
             font-family: 'Quicksand', sans-serif;
