--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,7 +7,7 @@ footer{
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
     width: 100%;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     padding-top: 30px;
    
     
