--- a/scss/_productsSection.scss
+++ b/scss/_productsSection.scss
@@ -7,15 +7,20 @@ section.productsSection{
     padding-bottom: 5vh;
     #carrot, #lettuce, #tomato, #strawberries, #bananas, #grapes, #milk, #cheese{
         display: flex;
-        height: 30vh;
+       // height: 30vh;
         justify-content: center;
         margin-top: 100px;
+        @media(max-width:640px){
+            flex-direction: column;
+         }
+         @media(min-width:641px) and (max-width:1280px){
+           flex-direction: column;
+         }
 
         
     
     div.photo{
         flex-basis: 30%;
-        background-color: red;
         padding-bottom: 3vh;
         img{
             width:100%;
@@ -28,10 +33,24 @@ section.productsSection{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @media(max-width:640px){
+            margin-left: 5vw;
+            margin-right: 5vw;
+            
+         }
+         @media(min-width:641px) and (max-width:1280px){
+            margin-left: 5vw;
+            margin-right: 5vw;
+         }
         p{
             font-family: 'Quicksand', sans-serif;
             font-size: 20px;
             line-height: 1.5;
+            text-align: center;
+            @media(max-width:640px){
+                font-size: 18px;
+             }
+             
         }
         p:nth-of-type(1){
             font-size: 30px;
