add javascript, not ready

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -12,6 +12,7 @@ header{
         justify-content: flex-end;
         align-items: center;
         padding-right: 150px;
+        padding-top: 20px;
         cursor: pointer;
 
         @media(max-width:640px){
