--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,147 +1,83 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
+main{
+    display:flex;
+    flex-direction: column;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    #carrot, #lettuce, #tomato, #strawberries, #bananas, #grapes, #milk, #cheese{
+        display: flex;
+       // height: 30vh;
+        justify-content: center;
+        margin-top: 100px;
+        @media(max-width:640px){
+            flex-direction: column;
+         }
+         @media(min-width:641px) and (max-width:1280px){
+           flex-direction: column;
+         }
 
-section.products{
-    display: flex;
-   max-width: 100vw;
-   overflow: hidden;
-    justify-content: space-between;
-    align-items: center;
-    @media(max-width:800px){
+        
+    
+    div.photo{
+        flex-basis: 30%;
+        padding-bottom: 3vh;
+        img{
+            width:100%;
+            border-radius: 5px;
+        }
+    }
+    div.form{
+        flex-basis: 50%;
+        display: flex;
         flex-direction: column;
-        
-    }
-    
-
-
-    div.vegetables{
-        width: 33vw;
-        transition: 0.3s;
-        cursor: pointer;
-        @media(max-width:800px){
-           width: 100vw;
+        justify-content: center;
+        align-items: center;
+        @media(max-width:640px){
+            margin-left: 5vw;
+            margin-right: 5vw;
             
-        }
-       
-        
-        
-        div.vegetablesMenu{
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            justify-content: center;
-           
-            
-        img{
-            width: 100%; 
-        }
-        
-        p{
-            text-align: center;
-            font-family: 'Quicksand', sans-serif;
-            font-size: 40px;
-            position: absolute;
-            top:50%;
-            left:50%;
-            transform: translate(-50%, -50%);
-            display: block;
-            width:100%;
-            background-color: rgba(255,255,255,0.8);
-            letter-spacing: 2px;
-            padding: 40px 0 40px 0;
-            @media(max-width:800px){
-                font-size: 30px;
-                padding: 20px 0 20px;  
-             }
-        }
-        
-    }
-   
-    
-    
-    }
-    div.fruits{
-        width: 33vw;
-        cursor: pointer;
-        @media(max-width:800px){
-            width: 100vw;
-             
          }
-         
-
-
-        div.fruitMenu{
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            justify-content: center;
-            
-        img{
-            width: 100%; 
-           
-           
-        }
-        p{
-            text-align: center;
-            font-family: 'Quicksand', sans-serif;
-            font-size: 40px;
-            position: absolute;
-            top:50%;
-            left:50%;
-            transform: translate(-50%, -50%);
-            display: block;
-            width:100%;
-            background-color: rgba(255,255,255,0.8);
-            letter-spacing: 2px;
-            padding: 40px 0 40px 0;
-            @media(max-width:800px){
-                font-size: 30px;
-                padding: 20px 0 20px;  
-             }
-             
-            
-        }
-    }
-    }
-    div.dairy{
-        width: 33vw;
-        cursor: pointer;
-        @media(max-width:800px){
-            width: 100vw;
-             
+         @media(min-width:641px) and (max-width:1280px){
+            margin-left: 5vw;
+            margin-right: 5vw;
          }
-         
-
-        div.dairyMenu{
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            justify-content: center;
-            
-        img{
-            width: 100%; 
-           
-           
-        }
         p{
-            text-align: center;
             font-family: 'Quicksand', sans-serif;
-            font-size: 40px;
-            position: absolute;
-            top:50%;
-            left:50%;
-            transform: translate(-50%, -50%);
-            display: block;
-            width:100%;
-            background-color: rgba(255,255,255,0.8);
-            letter-spacing: 2px;
-            padding: 40px 0 40px 0;
-            @media(max-width:800px){
-                font-size: 30px;
-                padding: 20px 0 20px 0;
+            font-size: 20px;
+            line-height: 1.5;
+            text-align: center;
+            @media(max-width:640px){
+                font-size: 18px;
              }
-           
+             
         }
+        p:nth-of-type(1){
+            font-size: 30px;
+        }
+        input[type=text]{
+            width: 150px;
+            height: 40px;
+            margin-top: 20px;
+            font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
+            border: 2px solid #64DD17;
+            
+
+        }
+        input[type=submit]{
+            width: 150px;
+            height: 40px;
+            margin-top: 20px;
+            font-size: 20px;
+            font-weight: bold;
+            letter-spacing: 2px;
+            font-family: 'Quicksand', sans-serif;
+            color:white;
+            background-color: #64DD17;
+            border-radius: 5px;
+        }
+        
     }
-    }
+  }
 }
