--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,11 @@
 @import "_reset.scss";
 @import "_header.scss";
 @import "_about.scss";
+@import "_nav.scss";
 @import "_main.scss";
+@import "_summary.scss";
 @import "_footer.scss";
-@import "_productsSection.scss";
+
 
 
 body{
