--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -58,11 +58,13 @@ header{
              }
             p{
                 position: absolute;
-                font-size: 20px;
+                font-size: 18px;
                 color:white;
                 top:50%;
                 left:50%;
                 transform: translate(-50%, -50%);
+                font-family: 'Quicksand', sans-serif;
+
               
             }
         }
